fixing assets paths for white labels to be from S3 for real

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,5 +1,5 @@
 %header#header{:role => 'banner'}
-  %a#yv_logo{:href => '/', style: asset_path(@site.logo_style) }
+  %a#yv_logo{:href => '/', style: @site.logo_style }
     =t("youversion")
   %nav
     %ul
