Design for the about page

--- a/app/assets/stylesheets/_pages.sass
+++ b/app/assets/stylesheets/_pages.sass
@@ -4,6 +4,31 @@
   padding-right: 520px
   background: image-url("bg-about.png") no-repeat top right
 
+.partners_content
+  overflow: hidden
+
+.partners_content .partners_box
+  float: left
+  width: 235px
+  margin: 0 45px 30px 0
+
+.partners_content .partners_box div
+  height: 146px
+  margin: 0
+  padding: 0
+  background: image-url("partner_shadow.gif") no-repeat bottom center
+  
+.partners_content .partners_box div img
+  border: 1px solid #F4F4F4
+  width: 235px
+  
+.partners_content .partners_box div:last-child
+  width: auto
+  height: auto
+  background: none
+  margin-top: 5px
+  text-align: center
+
 #main article .partner
   width: 50%
   float: left
