--- a/app/assets/stylesheets/_form_elements.sass
+++ b/app/assets/stylesheets/_form_elements.sass
@@ -408,6 +408,73 @@ button.color
 .action_button_blue:active
   +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
 
+.sm_action_button_blue,
+.sm_action_button_green
+  +border-radius(16px)
+  +box-shadow(inset rgba(#fff, 0.3) 0 1px 0 0, #fff 0 1px 0 0, #eeedeb 0 0 0 4px)
+  border: 1px solid #666
+  display: inline-block
+  font:
+    size: 10px
+    weight: bold
+  line-height: 1.3
+  text-align: center
+  text-shadow: rgba(#000, 0.5) 0 1px 0
+  padding: 3px 10px
+
+.sm_action_button_blue,
+.sm_action_button_green,
+.sm_action_button_blue:hover,
+.sm_action_button_green:hover
+  color: #fff
+  text-decoration: none
+
+.sm_action_button_green
+  +background-image(linear-gradient(#81a950, #679037))
+  background-color: #81a950
+
+.sm_action_button_green:hover,
+.sm_action_button_green:focus,
+.sm_action_button_green:active
+  +background-image(linear-gradient(#5d832f, #436916))
+  background-color: #5d832f
+
+.sm_action_button_green:focus,
+.sm_action_button_green:active
+  color: #9cae87
+
+.sm_action_button_green,
+.sm_action_button_green:hover,
+.sm_action_button_green:focus,
+.sm_action_button_green:active
+  border-color: #607346
+
+.sm_action_button_blue
+  +background-image(linear-gradient(#1a90cd, #0077b4))
+  background-color: #0077b4
+
+.sm_action_button_blue:hover,
+.sm_action_button_blue:focus,
+.sm_action_button_blue:active
+  +background-image(linear-gradient(#1a7aab, #006091))
+  background-color: #006091
+
+.sm_action_button_blue:focus,
+.sm_action_button_blue:active
+  color: #87abbe
+
+.sm_action_button_blue,
+.sm_action_button_blue:hover,
+.sm_action_button_blue:active,
+.sm_action_button_blue:focus
+  border-color: #0077b4
+
+.sm_action_button_green:focus,
+.sm_action_button_green:active,
+.sm_action_button_blue:focus,
+.sm_action_button_blue:active
+  +box-shadow(#fff 0 1px 0 0, #eeedeb 0 0 0 5px, inset rgba(#000, 0.5) 0 5px 10px 0)
+
 //
 // Icons inside buttons:
 //
