fixing asset path

--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -1,3 +1,3 @@
 .widget
   %a{href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
-    %img{src: '/assets/50million_banner.png', style: 'margin-bottom: 10px'}
+    %img{src: asset_path('50million_banner.png'), style: 'margin-bottom: 10px'}
