--- a/app/views/pages/status.html.haml
+++ b/app/views/pages/status.html.haml
@@ -31,3 +31,12 @@
       %p
         %b App Symbols:
         %span.mute= Symbol.all_symbols.size
+      %p                                                                                                                                                        
+        %b App Memory Info:                                                                                                                                     
+        %div                                                                                                                                                    
+          %b Process Memory Usage:                                                                                                                              
+          %span.mute= number_to_human_size(`ps -o rss= -p #{Process.pid}`.to_i * 1024)
+        -ObjectSpace.count_objects.each do |k, v|
+          %div                                                                                                                                                  
+            %b #{k}:                                                                                                                                            
+            %span.mute= v
