i18n for 50MM ad

--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -12,5 +12,5 @@
   - else
     %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px'}
       %p
-        Celebrating 50 million installs!
+        =t('celebrating 50MM')
       = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "display: block"
