--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -1,7 +1,7 @@
 .widget
   - if I18n.locale == :en
     %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px;'}
-      %div{style: 'display: table-cell; font-size: 80px; font-weight: bold; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 20px 0 0 10px; text-shadow: 0px -1px 1px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
+      %div{style: 'display: table-cell; font-size: 80px; font-weight: bold; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 24px 3px 0 10px; text-shadow: 0px -1px 1px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
         50
       %div{style: 'display: table-cell; vertical-align: top; padding: 8px 0 0 5px'}
         -# If you can't get the web fonts working, shrink the p below to 20px
