--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -10,6 +10,9 @@
         = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px"
   - else
     %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px'}
-      %p{style: 'font-size: 20px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; padding-left: 10px; padding-top: 7px'}
-        =t('celebrating 50MM')
-      = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), class: 'float_right', style: "display: block; position: absolute; color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; right: 90px; top: 47px"
+      %a{style: "text-decoration: none;", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
+        %p{style: 'font-size: 20px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; padding-left: 10px; padding-top: 7px'}
+          =t('celebrating 50MM')
+        - #link_to t('plans.more info'), external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), class: 'float_right', style: "display: block; position: absolute; color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; right: 90px; top: 47px"
+        - #{default: '2012/05/50m', :'pt-BR' => '2012/05/o-app-da-biblia-do-youversion-agora-instalado-em-50-milhoes-de-dispositivos-moveis', de: '2012/05/die-bible-app-von-youversion-auf-50-millionen-mobilen-geraten-installiert'}
+    
