--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -1,18 +1,18 @@
-.widget
-  - if I18n.locale == :en
-    %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px;'}
-      %div{style: 'display: table-cell; font-size: 80px; font-weight: bold; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 24px 3px 0 10px; text-shadow: 0px -1px 1px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
-        50
-      %div{style: 'display: table-cell; vertical-align: top; padding: 8px 0 0 5px'}
-        -# If you can't get the web fonts working, shrink the p below to 20px
-        %p{style: 'font-size: 23px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0'}
-          Million Bible app installs!
-        = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px"
-  - else
-    %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px'}
-      %a{style: "text-decoration: none;", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
-        %p{style: 'font-size: 20px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; padding-left: 10px; padding-top: 7px'}
-          =t('celebrating 50MM')
-        - #link_to t('plans.more info'), external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), class: 'float_right', style: "display: block; position: absolute; color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; right: 90px; top: 47px"
-        - #{default: '2012/05/50m', :'pt-BR' => '2012/05/o-app-da-biblia-do-youversion-agora-instalado-em-50-milhoes-de-dispositivos-moveis', de: '2012/05/die-bible-app-von-youversion-auf-50-millionen-mobilen-geraten-installiert'}
-    
+= cache "widget_ad_50MM_#{I18n.locale}", expires_in: 12.hours do
+  .widget
+    - if I18n.locale == :en
+      %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px;'}
+        %div{style: 'display: table-cell; font-size: 80px; font-weight: bold; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 24px 3px 0 10px; text-shadow: 0px -1px 1px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
+          50
+        %div{style: 'display: table-cell; vertical-align: top; padding: 8px 0 0 5px'}
+          -# If you can't get the web fonts working, shrink the p below to 20px
+          %p{style: 'font-size: 23px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0'}
+            Million Bible app installs!
+          = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px"
+    - else
+      %div{style: 'background: url(/assets/50million_banner.png) no-repeat; height: 80px; margin-bottom: 10px'}
+        %a{style: "text-decoration: none;", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
+          %p{style: 'font-size: 20px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; padding-left: 10px; padding-top: 7px'}
+            =t('celebrating 50MM')
+          - #link_to t('plans.more info'), external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), class: 'float_right', style: "display: block; position: absolute; color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; right: 90px; top: 47px"
+          - #{default: '2012/05/50m', :'pt-BR' => '2012/05/o-app-da-biblia-do-youversion-agora-instalado-em-50-milhoes-de-dispositivos-moveis', de: '2012/05/die-bible-app-von-youversion-auf-50-millionen-mobilen-geraten-installiert'}
