--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -3,13 +3,12 @@
     - background_path = asset_path('50million_banner.png')
     - if I18n.locale == :en
       %div{style: "background: url(#{background_path}) no-repeat; height: 80px; margin-bottom: 10px;"}
-        %div{style: 'display: table-cell; font-size: 80px; font-weight: bold; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 24px 3px 0 10px; text-shadow: 0px -1px 1px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
+        %div{style: 'display: table-cell; font-size: 80px; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; padding: 24px 3px 0 10px; text-shadow: 0px -1px 0px #660000; vertical-align: top; line-height: 40px;  letter-spacing: -.03em'}
           50
         %div{style: 'display: table-cell; vertical-align: top; padding: 8px 0 0 5px'}
-          -# If you can't get the web fonts working, shrink the p below to 20px
-          %p{style: 'font-size: 23px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0'}
+          %p{style: 'font-size: 23px; color: #FC0; line-height: 1em; width: 60%; text-shadow: 0px -1px 0px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; font-family: BebasNeueRegular, arial, sans-serif'}
             Million Bible app installs!
-          = link_to 'Learn More', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px"
+          = link_to 'Learn more', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; display: block; margin-top: -7px"
     - else
       %div{style: "background: url(#{background_path}) no-repeat; height: 80px; margin-bottom: 10px"}
         %a{style: "text-decoration: none;", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
