--- a/app/views/shared/_widget_ad_50MM.html.haml
+++ b/app/views/shared/_widget_ad_50MM.html.haml
@@ -10,10 +10,9 @@
             Million Bible app installs!
           = link_to 'Learn more', external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), style: "color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; display: block; margin-top: -7px"
     - else
-      %div{style: "background: url(#{background_path}) no-repeat; height: 80px; margin-bottom: 10px"}
-        %a{style: "text-decoration: none;", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
-          %p{style: 'font-size: 20px; font-weight: bold; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 1px #660000; letter-spacing: -.03em; margin: 0 0 -3px 0; padding-left: 10px; padding-top: 7px'}
-            =t('celebrating 50MM')
+      %div{style: "background: url(#{background_path}) no-repeat; height: 80px; margin-bottom: 10px; overflow: hidden"}
+        %a{style: "text-decoration: none; font-size: 20px; font-family: BebasNeueRegular, arial, sans-serif; color: #FC0; line-height: 1em; width: 70%; text-shadow: 0px -1px 0px #660000; letter-spacing: -.03em; margin: 13px 0 0 3px; padding-left: 10px; padding-top: 7px; display: block", href: external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices')}
+          =t('celebrating 50MM')
         -if [:es, :de, :ru, :"zh-CN", :"zh-TW", :nl, :fr, :ko, :sv, :nl, :"pt-BR"].find{|l| l == I18n.locale}
           %img{src: asset_path("app-icon-#{I18n.locale}-99x99.png"), style: "height:58px; width: 58px; position: absolute; top: 11px; right: 13px;"}
           - #link_to t('plans.more info'), external_url(:blog, '2012/05/the-bible-app-by-youversion-now-installed-on-50-million-mobile-devices'), class: 'float_right', style: "display: block; position: absolute; color: #FFF; font-size: 13px; font-family: arial, sans-serif; line-height: 30px; right: 90px; top: 47px"
