secure padge and avatar URLs

--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -8,7 +8,7 @@
           %li
             %a#header_profile_trigger{:href => '#'}
               %span
-                %img{:src => current_avatar}
+                %img{src: current_avatar}
                 =current_auth.username
             %ol#header_profile_menu
               %li
