upgrading asset sync and modifying sass to work with compass-rails

--- a/app/assets/stylesheets/_formalize.sass
+++ b/app/assets/stylesheets/_formalize.sass
@@ -2,11 +2,7 @@
 // Sass = http://sass-lang.com
 // Compass = http://compass-style.org
 
-@import compass/css3/background-clip
-@import compass/css3/border-radius
-@import compass/css3/box-shadow
-@import compass/css3/box-sizing
-@import compass/css3/gradient
+@import compass/css3
 
 // `Widths
 //----------------------------------------------------------------------------------------------------
