localized support links

--- a/app/views/pages/press.html.haml
+++ b/app/views/pages/press.html.haml
@@ -17,7 +17,7 @@
         %p
           %strong= t('press page.support')
           %br
-          =link_to "support.youversion.com", "http://support.youversion.com"
+          =link_to "support.youversion.com", external_url(:support)
   .widget
     %header
       %span= t('press page.contact header 2')
