--- a/app/views/shared/_footer.html.haml
+++ b/app/views/shared/_footer.html.haml
@@ -5,6 +5,9 @@
     %a{:href => 'http://www.lifechurch.tv'}=t("lifechurch short url")
     %span.separator
       |
+    %a{:href => external_url(:now)}=t("now")
+    %span.separator
+      |
     %a{:href => about_path}=t("about")
     %span.separator
       |
