--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -1,7 +1,13 @@
 - @title = "#{t('users.picture')} | #{@user.name || @user.username}"
 
-%p
-  %img{src: @user.user_avatar_url["px_128x128"]}
+-if @user.errors.any?
+  .form_errors
+    =t("picture_creation form errors")
+    %ul
+      - @user.errors.each do |e|
+        %li= t("users.profile.#{e}")
+
+%img{src: @user.user_avatar_url["px_128x128"]}
 = form_for @user, url: picture_path do |f|
   %p
     = f.label :image, t('users.profile.avatar file')
