--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,6 +1,7 @@
 %header#header{:role => 'banner'}
-  %a#yv_logo{:href => '/', style: @site.logo_style }
-    =t("youversion")
+  = cache "header_logo_#{@site}", expires_in: 1.hour do
+    %a#yv_logo{:href => '/', style: "#{@site.logo_style}; background-image: url(#{asset_path(@site.logo_image)})" }
+      =t("youversion")
   %nav
     %ul
       - if current_auth
