updated # of versions/languages copy

--- a/app/views/pages/l10n.html.haml
+++ b/app/views/pages/l10n.html.haml
@@ -7,7 +7,7 @@
     %ul.widget_menu
       %li
         %p
-          = "Our volunteer translators are working hard to make YouVersion available in many languages &ndash; more every month! If you want to help make YouVersion localized for your lanaguage, we would love your help!".html_safe
+          = "Our volunteer translators are working hard to make YouVersion available in hundreds of languages &ndash; more every month! If you want to help make YouVersion localized for your lanaguage, we would love your help!".html_safe
       %li
         = link_to("Visit the YouVersion Volunteer Site", "http://volunteer.youversion.com/become-a-volunteer")
 
