num with delim to default plan sidebar widget

--- a/app/views/plans/_default_sidebar.html.haml
+++ b/app/views/plans/_default_sidebar.html.haml
@@ -20,7 +20,7 @@
         %li
           = link_to(t("plans.view sample"), day: 1.to_s)
       %li
-        = link_to(t("plans.users subscribed", user_count: @plan.users.count), plan_users_path(@plan))
+        = link_to(t("plans.users subscribed", user_count: number_with_delimiter(@plan.users.count)), plan_users_path(@plan))
   .widget
     %header
       %span
