--- a/app/cells/version_selector/_item.haml
+++ b/app/cells/version_selector/_item.haml
@@ -1,6 +1,6 @@
 %tr
   %th
     %a.spinner_trigger{"data-version" => version.osis, :href => "#"}= version.osis_human
-  %td{class: version.audio? ? "audio" : ""}
+  %td{class: version.audio_version? ? "audio" : ""}
     %a.spinner_trigger{"data-version" => version.osis, :href => "#"}
       %div= version.title
