Fix avatar cache after user updates avatar
 * Display:none'ing each s3 avatar size with query string cache breaker on
   the picture show page
 * Added (ssl_)avatar_url_s3 urls for current user avatars
 * Added s3 option when generating user avatar urls
 * Added hooves dev gem so we can rails s unicorn (or just rails s in
   rails 3.2)
 * Ruby 1.9 hashes on files I touched
 * Removed whitespace on files I touched

--- a/app/views/users/self.html.haml
+++ b/app/views/users/self.html.haml
@@ -7,7 +7,7 @@
 %section.top_section
   %div.clearfix
     %a{href: "#"}
-      %img.avatar_huge{src: @user.user_avatar_url["px_128x128"]}
+      %img.avatar_huge{src: @user.s3_user_avatar_url["px_128x128"]}
     %div
       %h1= @user.name || @user.username
       %ul
