--- a/app/views/users/picture.html.haml
+++ b/app/views/users/picture.html.haml
@@ -7,7 +7,10 @@
       - @user.errors.each do |e|
         %li= t("users.profile.#{e}")
 
-%img{src: @user.user_avatar_url["px_128x128"]}
+%img{src: @user.s3_user_avatar_url['px_128x128'] + '?' + rand(1000000).to_s}
+- ['24x24', '48x48', '128x128', '512x512'].each do |s|
+  %img{src: @user.s3_user_avatar_url["px_#{s}"] + '?' + rand(1000000).to_s, style: 'display: none'}
+
 = form_for @user, url: picture_path do |f|
   %p
     = f.label :image, t('users.profile.avatar file')
