--- a/app/views/plans/settings.html.haml
+++ b/app/views/plans/settings.html.haml
@@ -64,15 +64,15 @@
 
   %hr
   .div.float_right
-    .float_right= button_to(@subscription.email_delivery? ? t('plans.email_off') : t('plans.email_on'),  plan_settings_path(email_delivery: (!@subscription.email_delivery?).to_s), class: 'action_button_green', style: "width: 14em; height: 30px; margin-bottom: 5px")
-    -if @subscription.email_delivery?
+    .float_right= button_to(@subscription.delivered_by_email? ? t('plans.email_off') : t('plans.email_on'),  plan_settings_path(email_delivery: (!@subscription.delivered_by_email?).to_s), class: 'action_button_green', style: "width: 14em; height: 30px; margin-bottom: 5px")
+    -if @subscription.delivered_by_email?
       %div
         .float_left{style: "width: 130px; overflow: hidden; text-overflow: ellipsis"}= @subscription.user.email
         .small.float_right{style: "margin-top: 3px"}= link_to(t("plans.email edit"), profile_path)
   %div{style: "width: 330px"}
     %h5= t("plans.email delivery")
     %p.float_left= t("plans.email delivery text")
-  -if @subscription.email_delivery?
+  -if @subscription.delivered_by_email?
     %form{method: 'get'}
       %div{style: "clear: both"}
         %select.float_right{onChange: "this.form.submit()", style: "width: 14em", name: "email_delivery"}
