fancy navigation now works

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -309,10 +309,8 @@
   margin-top: -20px
   overflow: hidden
   text-indent: -99999px
-  width: 45px
-  height: 45px
+  width: 44px
   position: fixed
-  height: 85%
   border-radius: 4px
 
 .nav_prev
@@ -322,9 +320,6 @@
 .nav_prev:hover
   background-color: #f1f1f1
 
-.nav_prev:active
-  background-position: -80px -40px
-
 .nav_next
   margin-left: 473px
   background-position: -58px 48%
@@ -332,6 +327,9 @@
 .nav_next:hover
   background-color: #f1f1f1
 
+.snap 
+  position: absolute
+  bottom: 30px
 
 // `Misc Classes
 //----------------------------------------------------------------------------------------------------
