--- a/app/views/users/devices.html.haml
+++ b/app/views/users/devices.html.haml
@@ -1,10 +1,14 @@
 - @title = "#{t('users.connected devices')} | #{@user.name || @user.username}"
 
 %ul.big_list
-  - @devices.each do |d|
+  - if @devices.present?
+    - @devices.each do |d|
+      %li
+        %div.float_right.confirm= link_to t('remove'), device_path(d.id), method: :delete, "data-confirm-text" => t('confirm danger')
+        %h4= "#{d.vendor} #{d.model}"
+        %p.mute.negative_gutter_top_half
+          = d.os
+          = t('registered ago', time_ago: time_ago_in_words(d.created_date))
+  - else
     %li
-      %div.float_right.confirm= link_to t('remove'), device_path(d.id), method: :delete, "data-confirm-text" => t('confirm danger')
-      %h4= "#{d.vendor} #{d.model}"
-      %p.mute.negative_gutter_top_half
-        = d.os
-        = t('registered ago', time_ago: time_ago_in_words(d.created_date))
+      %h4= "No devices found"
