Replace primary nav tooltip imgs with sprite

--- a/app/assets/stylesheets/_nav_primary.sass
+++ b/app/assets/stylesheets/_nav_primary.sass
@@ -92,9 +92,9 @@
   display: block
   width: auto
   height: 31px
-  padding-left: 10px
-  margin-left: -10px
-  background: image-url("bg-menu-tooltip-left.png") no-repeat left
+  padding-left: 9px
+  margin-left: -9px
+  background: image-url("bg-menu-tooltip.png") no-repeat left top
   position: absolute
   left: 56px
   top: 13px
@@ -112,5 +112,5 @@
   color: white
   font-weight: bold
   text-shadow: 0 1px 1px #000
-  background: image-url("bg-menu-tooltip-right.png") no-repeat right
+  background: image-url("bg-menu-tooltip.png") no-repeat right bottom
 
