--- a/app/cells/version_selector/_item.haml
+++ b/app/cells/version_selector/_item.haml
@@ -1,6 +1,6 @@
 %tr
   %th
-    %a.spinner_trigger{"data-version" => version.osis, :href => "#"}= version.osis_human
+    %a.spinner_trigger{"data-version" => version.to_param, :href => "#"}= version.human
   %td{class: version.audio_version? ? "audio" : ""}
-    %a.spinner_trigger{"data-version" => version.osis, :href => "#"}
+    %a.spinner_trigger{"data-version" => version.to_param, :href => "#"}
       %div= version.title
