--- a/app/views/shared/_modal_single_verse.html.haml
+++ b/app/views/shared/_modal_single_verse.html.haml
@@ -9,7 +9,7 @@
           = @version
         &nbsp;
         / %small
-        /   %a{:href => reference_path(@single_verse.raw_hash.except(:version).to_osis_string)}= t("compare all versions")
+        /   %a{:href => reference_path(@single_verse.to_usfm)}= t("compare all versions")
 
         %a.close{:href => '#'} Close
       %section
