--- a/app/cells/book_selector/display.html.haml
+++ b/app/cells/book_selector/display.html.haml
@@ -8,9 +8,9 @@
       =t("book")
     .scroll
       %ul
-        - @version.books.each do |k, v|
+        - @version.books.each do |book_usfm, book_info|
           %li
-            %a{:href => '#', "data-book" => k, "data-version" => @version.human, "data-chapters" => @version.books[k].chapters}=  v.human
+            %a{:href => '#', "data-book" => book_usfm, "data-version" => @version.to_param, "data-chapters" => @version.books[book_usfm].chapters.map(&:human), "data-chapter-refs" => @version.books[book_usfm].chapters.map(&:usfm)}=  book_info.human
   #menu_chapter
     %header
       =t("chapter")
