--- a/app/cells/version_selector/all_versions.html.haml
+++ b/app/cells/version_selector/all_versions.html.haml
@@ -1,9 +1,9 @@
 %tr
   %th{:colspan => '2'}= @version.language.human
-- @this_language.each do |k, v|
-  = render partial: 'item', locals: {version: v}
-- @all_languages.each do |k, v|
+- @this_language.each do |ver|
+  = render partial: 'item', locals: {version: ver}
+- @all_languages.each do |lang, versions|
   %tr
-    %th{:colspan => '2'}= @languages[k]
-  - v.each do |kk, vv|
-    = render partial: 'item', locals: {version: vv}
+    %th{:colspan => '2'}= @languages[lang]
+  - versions.each do |ver|
+    = render partial: 'item', locals: {version: ver}
