--- a/app/views/notes/_sidebar.html.haml
+++ b/app/views/notes/_sidebar.html.haml
@@ -27,10 +27,10 @@
                     %br
                     %a{href: i.note_url}= i.note_username
     - else
-      = render_cell :notes_list_widget, :display, notes: Note.all(language_iso: I18n.locale), title: t("notes.community notes")
-      
+      = render_cell :notes_list_widget, :display, notes: Note.all(language_iso: I18n.locale, cache_for: 2.minutes), title: t("notes.community notes")
+
   - else
-    = render_cell :notes_list_widget, :display, notes: Note.all(language_iso: I18n.locale), title: t("notes.community notes")
+    = render_cell :notes_list_widget, :display, notes: Note.all(language_iso: I18n.locale, cache_for: 2.minutes), title: t("notes.community notes")
 
   = render "shared/widget_ad_bible_app"
 
