--- a/app/cells/notes_list_widget/display.html.haml
+++ b/app/cells/notes_list_widget/display.html.haml
@@ -1,25 +1,26 @@
-%header
-  %a.count{href: @link}= @notes.total
-  %span.header_icon_note= @title 
-%section
-  %table
-    %tbody
-      - if !@notes.empty?
-        - @notes.first(8).each do |note|
+%div.widget
+  %header
+    %a.count{href: @link}= @notes.total
+    %span.header_icon_note= @title
+  %section
+    %table
+      %tbody
+        - if !@notes.empty?
+          - @notes.first(8).each do |note|
+            %tr
+              %th
+                %a
+                  %img.avatar_small{src: note.user_avatar_url.px_24x24}
+              %td
+                %a= link_to note.title, note_path(note.id)
+                %p.mute.small.negative_gutter_top_half= note.username
+          %tfoot
+            %tr
+              %th
+              %td.align_right
+                %a.more_arrow{href: @link}= t('show all notes', total: @notes.total)
+        - else
           %tr
             %th
-              %a
-                %img.avatar_small{src: note.user_avatar_url.px_24x24} 
             %td
-              %a= link_to note.title, note_path(note.id)
-              %p.mute.small.negative_gutter_top_half= note.username
-        %tfoot
-          %tr
-            %th
-            %td.align_right
-              %a.more_arrow{href: @link}= t('show all notes', total: @notes.total)
-      - else
-        %tr
-          %th
-          %td
-            %p= t('notes.no community notes')
+              %p= t('notes.no community notes')
