adding subpixel antialiasing for headers

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -234,6 +234,7 @@
   font-weight: bold
   font-size: 25px
   margin-bottom: 20px
+  -webkit-font-smoothing: subpixel-antialiased
 
 // `Main > Verses
 //----------------------------------------------------------------------------------------------------
