--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -246,11 +246,8 @@
   height: 0
 
 .verse.selected
-  background: #ddd !important
-  color: $body_text !important
-
-.verse
-  border-radius: 4px
+  border-bottom: 1px
+  border-bottom-style: dotted
 
 .verse + .verse
   margin-left: 3px
