highlights fetch fixed and mock flexibility added for references

--- a/app/assets/stylesheets/_main_reader.sass
+++ b/app/assets/stylesheets/_main_reader.sass
@@ -245,7 +245,7 @@
   width: 0
   height: 0
 
-.verse .content.selected
+.verse.selected .content
   border-bottom: 1px
   border-bottom-style: dotted
 
